--- a/glink-dist/pom.xml
+++ b/glink-dist/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>glink-parent</artifactId>
         <groupId>cn.edu.whu</groupId>
-        <version>0.2-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
