add nyc heatmap metric experimental test

--- a/glink-examples/pom.xml
+++ b/glink-examples/pom.xml
@@ -158,6 +158,16 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.27</version>
         </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>bijection-core_2.11</artifactId>
+            <version>0.9.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>bijection-avro_2.11</artifactId>
+            <version>0.9.7</version>
+        </dependency>
     </dependencies>
 
     <build>
